tests/templates/function/compile_fail/missing_check.rs
use pre::pre;

#[pre("must be bar")]
fn foo() {}

fn main() {
    foo()
}
